# ClashVision

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: dataset.yaml
scripts/: README.md  run-black.sh  run-pytest.sh  setup-env.sh  train-on-vm.sh
src/clashvision/core/: path.py
src/clashvision/data/: bouding_box.py  class_distribution.py  dataset_integrity.py  generate_dataset_yaml.py  visual_inspection.py
src/clashvision/enums/: clash_class.py
src/clashvision/inference/: yolo_inference.py  yolo_validate.py
src/clashvision/train/: convert_to_stable.py  torchscript.py  train.py  yolo_train.py
tests/: README.md  test_clash_class.py  test_path.py
