[project]
name = "clashvision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maxime-Cllt" }
]
requires-python = ">=3.13"
packages = [{ include = "clashvision", from = "src" }]
dependencies = [
    "ultralytics>=8.3.204", # YOLOv8 for object detection
    "torch>=2.8.0", # PyTorch for deep learning
    "torchvision>=0.23.0", # Computer vision library for PyTorch
    "numpy>=2.2.6", # Numerical computing library
    "pandas>=2.3.3", # Data manipulation and analysis library
    "opencv-python>=4.12.0.88", # OpenCV for image processing
    "matplotlib>=3.10.6", # Plotting library
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.2", # Machine learning library
    "tqdm>=4.67.1", # Progress bar library
]


[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "black>=25.1.0",
    "ruff>=0.12.11"
]

# Configuration for Hatch build system
[tool.hatch.build]
include = [
    "datalint_ml/**.py",
    "README.md",
    "LICENSE",
]
exclude = [
    "tests/",
    "docs/",
    "*.ipynb",
    ".github/",
    ".vscode/",
    ".idea/",
]

# Configuration for pytest
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


