[project]
name = "clashvision"
version = "0.2.0"
description = "A computer vision model for Clash of Clans gold and elixir classification."
readme = "README.md"
authors = [
    { name = "Maxime-Cllt" }
]
requires-python = ">=3.13"
dependencies = [
    "ultralytics>=8.3.204", # YOLOv8 for object detection
    "torch>=2.8.0", # PyTorch for deep learning
    "numpy>=2.2.6", # Numerical computing library
    "pandas>=2.3.3", # Data manipulation and analysis library
    "matplotlib>=3.10.6", # Plotting library
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "black>=25.1.0",
    "ruff>=0.12.11"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configuration for Hatch build system
[tool.hatch.build.targets.wheel]
packages = ["src/clashvision"]

[tool.hatch.build]
include = [
    "src/clashvision/**/*.py",
    "README.md",
    "LICENSE",
]
exclude = [
    "tests/",
    "docs/",
    "*.ipynb",
    ".github/",
    ".vscode/",
    ".idea/",
]

# Configuration for pytest
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]